# UM-SolarSysCG

./: .gitignore  CMakeLists.txt  Makefile  README.md  bezier_100.3d  config.h  globals.h  imgui.ini  main.cpp  vcpkg.json
.github/workflows/: format.yml
common/: CMakeLists.txt
common/include/: utils.hpp
common/src/: utils.cpp
engine/: CMakeLists.txt
engine/include/: Camera.hpp  Configuration.hpp  Model.hpp  ModelGroup.hpp  cameraController.hpp  catmullCurves.hpp  filesParser.hpp  light.hpp  process_input.hpp  readFile.hpp
engine/src/: Camera.cpp  Configuration.cpp  Model.cpp  ModelGroup.cpp  Window.cpp  cameraController.cpp  catmullCurves.cpp  filesParser.cpp  light.cpp  main.cpp  menuGUI.cpp  process_input.cpp  readFile.cpp  vertexCords.cpp
generator/: CMakeLists.txt
generator/include/shapes/: cone.hpp  cube.hpp  cylinder.hpp  donut.hpp  patches.hpp  plane.hpp  sphere.hpp
generator/src/: main.cpp  save3dFile.cpp
generator/src/shapes/: cone.cpp  cube.cpp  cylinder.cpp  donut.cpp  patches.cpp  plane.cpp  sphere.cpp
lib/devil/IL/: il.h
lib/glew/GL/: glew.h
lib/glut/GL/: glut.h
lib/stb_image/: stb_image.h
models/: bezier_100.3d  donut.3d  output_file.3d
scenes/: comet.xml  default.xml  scene_teapot.xml  solar.xml  solar_system.xml  solar_system_align.xml  teste.py
scenes/testes/: test_4_1.xml  test_4_2.xml  test_4_3.xml
scripts/: controlPoints.py  format.sh  generate_asteroids.py  same_align.py
videos/: test_3_1.mkv
